syntax = "proto3";

package ru.otus.homework.protobuf.generated;

option java_multiple_files = true;

message ClientMessage {
  int32 firstValue = 1;
  int32 lastValue = 2;
}

message ServerMessage {
  int32 value = 1;
}

service RemoteDBService {
  rpc sendMessage(ClientMessage) returns (stream ServerMessage);
}
